lang/tests/compile_fail/instruction_arg_rejects_invalid_zc.stderr
error[E0277]: the trait bound `bool: ZcElem` is not satisfied
 --> tests/compile_fail/instruction_arg_rejects_invalid_zc.rs:8:15
  |
8 |     type Zc = bool;
  |               ^^^^ the trait `ZcElem` is not implemented for `bool`
  |
  = help: the following other types implement trait `ZcElem`:
            PodBool
            PodI128
            PodI16
            PodI32
            PodI64
            PodOption<T, PFX>
            PodStringZc<N, PFX>
            PodU128
          and $N others
note: required by a bound in `quasar_lang::instruction_arg::InstructionArg::Zc`
 --> src/instruction_arg.rs
  |
  |     type Zc: zeropod::ZcElem;
  |              ^^^^^^^^^^^^^^^ required by this bound in `InstructionArg::Zc`
